fix: ensure consistent invitation download rendering on mobile

--- a/src/cta/cta.css
+++ b/src/cta/cta.css
@@ -84,6 +84,14 @@
   font-size: 2rem;
   color: #333;
 }
+.cta-image-text-2 {
+  position: absolute;
+  top: 32.5%;
+  left: 57%;
+  font-family: var(--font-great-vibes);
+  font-size: 7rem;
+  color: #333;
+}
 
 /* sweet alert */
 .swal-title {
